--- a/src/main/resources/maket/12.fxml
+++ b/src/main/resources/maket/12.fxml
@@ -39,36 +39,20 @@
                         <TextArea fx:id="mailTextField" layoutX="14.0" layoutY="46.0" prefHeight="465.0" prefWidth="503.0" promptText="Текст письма" />
                         <Button fx:id="createCurratorsListButton" layoutX="1049.0" layoutY="34.0" mnemonicParsing="false" text="Составить список" />
                         <TextArea fx:id="curratorsArea" layoutX="528.0" layoutY="46.0" prefHeight="740.0" prefWidth="479.0" />
-                        <TextArea fx:id="blackListArea" layoutX="1020.0" layoutY="179.0" prefHeight="596.0" prefWidth="142.0" />
                         <Label layoutX="528.0" layoutY="2.0" prefHeight="9.0" prefWidth="200.0" text="Список на отправку" textAlignment="CENTER" />
-                        <Label layoutX="1022.0" layoutY="141.0" prefHeight="25.0" prefWidth="140.0" text="Чёрный список" />
                         <Button fx:id="sendButton" disable="true" layoutX="1049.0" layoutY="60.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="113.0" text="Отправить" />
                         <ProgressBar fx:id="sendMailProgressBar" layoutX="13.0" layoutY="745.0" prefHeight="30.0" prefWidth="505.0" progress="0.0" />
                         <TextField fx:id="directoryMailFilesField" layoutX="14.0" layoutY="532.0" prefHeight="25.0" prefWidth="502.0" promptText="Путь к файлам на отправку" />
                         <Label layoutX="1050.0" layoutY="101.0" prefHeight="28.0" prefWidth="96.0" text="База обновлена" />
                         <CheckBox fx:id="updateDbCheck" layoutX="1146.0" layoutY="106.0" mnemonicParsing="false" />
                   <Label layoutX="528.0" layoutY="18.0" prefHeight="17.0" prefWidth="200.0" text="(0) - нет почты, (1) - уже отпр." textAlignment="CENTER" />
+                  <TextArea fx:id="blackListArea" layoutX="1022.0" layoutY="179.0" prefHeight="607.0" prefWidth="140.0" />
                   <Button fx:id="createListKit" layoutX="1049.0" layoutY="8.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="113.0" text="Комплектность" />
+                  <Label layoutX="1024.0" layoutY="132.0" prefHeight="37.0" prefWidth="138.0" text="Чёрный, как арабская ночь, список" wrapText="true" />
                     </children>
                 </AnchorPane>
             </content>
         </Tab>
-      <Tab text="Списки с сайта">
-        <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-               <children>
-                  <TextArea fx:id="absent" layoutX="14.0" layoutY="63.0" prefHeight="720.0" prefWidth="365.0" />
-                  <TextArea fx:id="waste" layoutX="401.0" layoutY="63.0" prefHeight="720.0" prefWidth="365.0" />
-                  <Label layoutX="14.0" layoutY="42.0" prefHeight="17.0" prefWidth="203.0" text="Нет на сайте:" />
-                  <Label layoutX="404.0" layoutY="42.0" prefHeight="17.0" prefWidth="199.0" text="Не должно быть на сайте" />
-                  <Button fx:id="crListSite" layoutX="447.0" layoutY="10.0" mnemonicParsing="false" text="Составить списки" />
-                  <TextArea fx:id="findDone" layoutX="784.0" layoutY="64.0" prefHeight="717.0" prefWidth="378.0" />
-                  <Label layoutX="784.0" layoutY="42.0" prefHeight="17.0" prefWidth="199.0" text="Найденые" />
-                  <TextField fx:id="sitePathField" layoutX="14.0" layoutY="10.0" prefHeight="25.0" prefWidth="412.0" promptText="путь" />
-               </children>
-            </AnchorPane>
-        </content>
-      </Tab>
         <Tab text="Логи">
          <content>
             <AnchorPane prefHeight="200.0" prefWidth="200.0">
